footer overlap styling fix

--- a/public/styles.css
+++ b/public/styles.css
@@ -380,6 +380,7 @@ button:hover {
 #sort-photos {
     display: none;
     height: 52vh;
+    overflow-y: scroll;
 }
 
 #gallery-select {
